syntax = "proto3";

package server.v1;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

// Defines the import path that should be used to import the generated package,
// and the package name.
option go_package = "github.com/eljoth/masterseminar/code/server/pkg/pb;pb";
// These annotations are used when generating the OpenAPI file.
option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  swagger: "2.0"
  info: {
    title: "server-api"
    version: "1.0"
    description: "Masterseminar Lars Hick WS23 Lastverteiling von HTTP/2-Anfragen in Kubernetes - Server"
  }
  schemes: HTTP
  host: "localhost:8080"
};

service ServerService {
  rpc GetSQRT(GetSQRTRequest) returns (GetSQRTResponse) {
    option (google.api.http) = {
      get: "/api/v1/sqrt/{number}"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Get Square Root"
      description: "Returns the square root for the given natural number."
      tags: "sqrt"
    };
  }
}

message GetSQRTRequest {
  int64 number = 1;
}

message GetSQRTResponse {
  float result = 1;
}
